--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Box Officed | </title>
+  <title>Box Officed! | Movies ranked by their revenues, because masses cannot be wrong, right?</title>
 </head>
 
 <body>
