--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-KF4SHT5');
   </script>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- End Google Tag Manager -->
   <!--
       manifest.json provides metadata used when your web app is added to the
@@ -59,6 +60,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
 </body>
 
 </html>
