--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,19 @@
 <html lang="en">
 
 <head>
+  <!-- Page hiding snippet (recommended) -->
+  <style>
+    .async-hide {
+      opacity: 0 !important
+    }
+  </style>
+  <script>
+    (function (a, s, y, n, c, h, i, d, e) {
+      s.className += ' ' + y;
+      h.end = i = function () { s.className = s.className.replace(RegExp(' ?' + y), '') };
+      (a[n] = a[n] || []).hide = h; setTimeout(function () { i(); h.end = null }, c);
+    })(window, document.documentElement, 'async-hide', 'dataLayer', 4000, { 'GTM-KF4SHT5': true });
+  </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
