--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <!-- Page hiding snippet (recommended) -->
+  <!-- Page hiding snippet -->
   <style>
     .async-hide {
       opacity: 0 !important
