--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
+  <title>Box Officed! | Movies ranked by their revenues, because masses are
+    never wrong!</title>
   <!-- Google Tag Manager -->
   <script>
     (function (w, d, s, l, i) {
@@ -51,7 +53,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Box Officed! | Movies ranked by their revenues, because masses cannot be wrong, right?</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta property="og:url" content="https://boxofficed.com" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Box Officed!" />
+  <meta property="og:description" content="Movies ranked by their revenues, because masses are
+            never wrong!" />
+  <meta property="og:image" content="%PUBLIC_URL%/boxofficed-image.png" />
 </head>
 
 <body>
