--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
     -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <meta property="og:url" content="https://boxofficed.com" />
+  <meta property="og:url" content="%PUBLIC_URL%" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Box Officed!" />
   <meta property="og:description" content="Movies ranked by their revenues, because masses are
