--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Box Officed!" />
   <meta property="og:description" content="Movies ranked by their revenues, because masses are
             never wrong!" />
-  <meta property="og:image" content="https://boxofficed.com/boxofficed-image.png" />
+  <meta property="og:image" content="https://boxofficed.com/boxofficed-img.png" />
   <!-- Page hiding snippet -->
   <style>
     .async-hide {
